# Python_Template

./: .gitignore  .pre-commit-config.yaml  README.md  install.sh  main.py  pyproject.toml  run.sh
.github/workflows/: uv.yml
project/: __main__.py
scripts/: install.sh  run.sh  update_hooks.sh  update_packages.sh
