[project]
name = "python-template"
version = "0.0.1"
description = "Template for new Python projects"
readme = "README.md"
requires-python = ">=3.14"
dependencies = []

[dependency-groups]
dev = [
    { include-group = "lint" },
]
lint = [
    "mypy>=1.19.1",
    "pre-commit>=4.5.1",
    "ty>=0.0.10",
]

[tool.pyright]
typeCheckingMode = "strict"

[tool.ruff.lint]
extend-select = ["I"]
